--- a/style/index.css
+++ b/style/index.css
@@ -66,24 +66,9 @@ body {
     background-image: url(/img/paperBackground.jpg);
 }
 
-/* h1 {
-    font-size:5rem;
-    color: #FBFFFB;
-}
-
-h2 {
-    font-size:3rem;
-    text-align:center;
-}
-
-h3 {
-    font-size:2.5rem;
-    text-align:center;
-} */
-
 /* header */
 
- nav {
+ .navHeader {
      display: flex;
      justify-content: space-between;
      width: 100%;
@@ -109,7 +94,7 @@ h3 {
      
  }
 
- a {
+ .links a {
     width: 50%;
     text-decoration: none;
     border: 3px solid #ff3d3d;
@@ -118,7 +103,7 @@ h3 {
     color: #ffffff;
  }
 
- a:hover {
+ .links a:hover {
      color: #C6E807;
  }
 
@@ -192,7 +177,64 @@ h2 {
 
  .wordsTop h3 {
     font-size: 4rem;
+    font-family: 'Indie Flower', cursive;
+    color: #000000;
  }
+ .second {
+     display: flex;
+ }
+
+ .bottomThree img {
+     width: 100%;
+     display: flex;
+     justify-content: space-evenly;
+     margin: 0%;
+     padding: 3%;
+ }
+
+ .wordsBottom {
+    width: 100%;
+    display: inline-flex;
+    justify-content: space-around;
+ }
+
+ .wordsBottom h3 {
+    font-size: 4rem;
+    font-family: 'Indie Flower', cursive;
+    color: #000000;
+ }
+
+ /* footer */
+
+ footer {
+     height: 30vh;
+     background-color: #54beff;
+ }
+
+ .navFooter {
+    width: 100%;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     font-size: 4rem;
+     text-align: center;
+     font-family: 'Indie Flower', cursive;
+ }
+
+ .navFooter a {
+    width: 20%;
+    text-decoration: none;
+    border-radius: 3px;
+    background-color: #ff3d3d;
+    color: #ffffff;
+    position: absolute;
+    bottom: -115%;
+ }
+ .navFooter a:hover {
+    border: 3px solid #C6E807;
+ }
+
+
 
  
 
